--- a/front-end-pages/member-page/member-page.html
+++ b/front-end-pages/member-page/member-page.html
@@ -26,7 +26,7 @@
 
 <div>
     <div class="row">
-        <div class="mas-title col-md-12">
+        <div class="mas-title">
             Welcome, <?php echo $user->getName()->getFullName(); ?>!        
         </div>
     </div>
