--- a/front-end-pages/member-page/member-page.html
+++ b/front-end-pages/member-page/member-page.html
@@ -24,7 +24,7 @@
     }
 ?>
 
-<div>
+<div class="container">
     <div class="row">
         <div class="mas-title">
             Welcome, <?php echo $user->getName()->getFullName(); ?>!        
