--- a/front-end-pages/member-page/member-page.html
+++ b/front-end-pages/member-page/member-page.html
@@ -32,41 +32,50 @@
     </div>
 
     <div class="row">
-        <!-- PICTURE, BUTTONS -->
-        <div style="text-align: center" class="col-md-4">
-            <?php echo '<img src="' . plugins_url( '../images/female-placeholder.png', __FILE__ ) . '" id="profilePic" alt="Profile Picture">' . "\n";
-                    ?>
-            <br>
-            <button type="password" class="btn mas-button">Change Password</button>
+        <!-- PERSONAL INFO FORM -->
+        <div style="text-align: center" class="panel panel-default col-md-4">
+            <div class="panel-heading">
+                <h3 class="panel-title mas-title">User Details</h3>
+            </div>
+
+            <div class="panel-body">
+                <form name="userForm" method="POST" action="<?php echo admin_url( 'admin-post.php') ?>">
+                    <div class="form-group">
+                        <label for="firstName">First Name</label>
+                        <input name="firstName" class="form-control" value="<?php echo $firstName; ?>">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="lastName">Last Name</label>
+                        <input name="lastName" class="form-control" value="<?php echo $lastName; ?>">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="inputEmail" class="control-label">Personal Email</label>
+                        <input type="email" name="personalEmail" class="form-control" id="inputEmail" placeholder="Email" required value="<?php echo $personalEmail; ?>">
+                    </div>
+
+                    <div class="form-group">
+                        <label class="dmEmail">DM Email</label>
+                        <input type="text" class="form-control" id="username" value="<?php echo $dm_email; ?>" disabled>
+                    </div>
+
+                    <input type="hidden" name="action" value="update_self">
+
+                    <button type="submit" class="btn mas-button">Update Info</button>
+                </form>
+            </div>
         </div>
 
-        <!-- PERSONAL INFO FORM -->
-        <div style="text-align: center" class="col-md-4">
-            <form name="userForm" method="POST" action="<?php echo admin_url( 'admin-post.php') ?>">
-                <div class="form-group">
-                    <label for="firstName">First Name</label>
-                    <input name="firstName" class="form-control" value="<?php echo $firstName; ?>">
-                </div>
+        <!-- PASSWORD -->
+        <div style="text-align: center" class="panel panel-default col-md-4">
+            <div class="panel-heading">
+                <h3 class="panel-title mas-title">Password</h3>
+            </div>
 
-                <div class="form-group">
-                    <label for="lastName">Last Name</label>
-                    <input name="lastName" class="form-control" value="<?php echo $lastName; ?>">
-                </div>
-
-                <div class="form-group">
-                    <label for="inputEmail" class="control-label">Personal Email</label>
-                    <input type="email" name="personalEmail" class="form-control" id="inputEmail" placeholder="Email" required value="<?php echo $personalEmail; ?>">
-                </div>
-
-                <div class="form-group">
-                    <label class="dmEmail">DM Email</label>
-                    <input type="text" class="form-control" id="username" value="<?php echo $dm_email; ?>" disabled>
-                </div>
-
-                <input type="hidden" name="action" value="update_self">
-
-                <button type="submit" class="btn mas-button">Update Info</button>
-            </form>
+            <div class="panel-body">
+                <button type="password" class="btn mas-button">Change Password</button>
+            </div>
         </div>
 
         <!-- PAYMENT INFO -->
