--- a/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.html
+++ b/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.html
@@ -36,47 +36,52 @@ function isSelected($option, $target) {
         </div>
 
         <div class="row">
-            <div class="form-container col-md-6">
-                <form name="editMember" class="form-horizontal" action="<?php echo admin_url( 'admin-post.php') ?>" method="post">
-                    <input type="hidden" name="username" value="<?php echo $user->getPrimaryEmail();?>">
+            <div class="panel panel-default col-md-6">
+                <div class="panel-heading">
+                    <h3 class="panel-title mas-title">User Details</h3>
+                </div>
 
-                    <div class="form-group">
-                        <label for="firstName" class="control-label">First Name</label>
-                        <input required name="firstName" class="form-control" value="<?php echo $user->getName()->getGivenName();?>">
-                    </div>
+                <div class="panel-body">
+                    <form name="editMember" class="form-horizontal" action="<?php echo admin_url( 'admin-post.php') ?>" method="post">
+                        <div class="form-group">
+                            <label for="firstName" class="control-label">First Name</label>
+                            <input required name="firstName" class="form-control" value="<?php echo $user->getName()->getGivenName();?>">
+                        </div>
 
-                    <div class="form-group">
-                        <label for="lastName" class="control-label">Last Name</label>
-                        <input required name="lastName" class="form-control" value="<?php echo $user->getName()->getFamilyName();?>">
-                    </div>
+                        <div class="form-group">
+                            <label for="lastName" class="control-label">Last Name</label>
+                            <input required name="lastName" class="form-control" value="<?php echo $user->getName()->getFamilyName();?>">
+                        </div>
 
-                    <div class="form-group">
-                        <label for="rfidNumber" class="control-label">RFID Number</label>
-                        <input name="rfidNumber" class="form-control" value="<?php echo $user->getCustomSchemas()['roles']['rfid-id'];?>">
-                    </div>
+                        <div class="form-group">
+                            <label for="rfidNumber" class="control-label">RFID Number</label>
+                            <input name="rfidNumber" class="form-control" value="<?php echo $user->getCustomSchemas()['roles']['rfid-id'];?>">
+                        </div>
 
-                    <div class="form-group">
-                        <label for="membershipPlan" class="control-label">Membership Plan</label>
-                        <select class="form-control" name="membershipPlan" id="membershipPlan">
-                            <option value="basic-ind" <?php isSelected("basic-ind", $plan)?> >Individual Basic ($25/mo)</option>
-                            <option value="support-ind" <?php isSelected("support-ind", $plan)?> >Individual Supporter ($40/mo)</option>
-                            <option value="basic-fam" <?php isSelected("basic-fam", $plan)?> >Family Basic ($50/mo)</option>
-                            <option value="support-fam" <?php isSelected("support-fam", $plan)?> >Family Supporter ($75/mo)</option>
-                        </select>
-                    </div>
+                        <div class="form-group">
+                            <label for="membershipPlan" class="control-label">Membership Plan</label>
+                            <select class="form-control" name="membershipPlan" id="membershipPlan">
+                                <option value="basic-ind" <?php isSelected("basic-ind", $plan)?> >Individual Basic ($25/mo)</option>
+                                <option value="support-ind" <?php isSelected("support-ind", $plan)?> >Individual Supporter ($40/mo)</option>
+                                <option value="basic-fam" <?php isSelected("basic-fam", $plan)?> >Family Basic ($50/mo)</option>
+                                <option value="support-fam" <?php isSelected("support-fam", $plan)?> >Family Supporter ($75/mo)</option>
+                            </select>
+                        </div>
 
-                    <div class="form-group">
-                        <label for="subscriptionExp" class="control-label">Subscription Expiration Date</label>
-                        <input type="date" name="subscriptionExp" class="form-control" value= <?php echo $expDate; ?> >
-                    </div>
+                        <div class="form-group">
+                            <label for="subscriptionExp" class="control-label">Subscription Expiration Date</label>
+                            <input type="date" name="subscriptionExp" class="form-control" value= <?php echo $expDate; ?> >
+                        </div>
 
-                    <button class="mas-button" type="submit">Save Changes</button>
+                        <input type="hidden" name="action" value="update_member">
+                        <input type="hidden" name="username" value="<?php echo $user->getPrimaryEmail();?>">
 
-                    <input type="hidden" name="action" value="update_member">
-                </form>
+                        <button class="mas-button" type="submit">Save Changes</button>
+                    </form>
+                </div>
             </div>
 
-            <div id="panel panel-default col-md-6">
+            <div class="panel panel-default col-md-6">
                 <div style="text-align:center" class="panel-heading">
                     <h3 class="panel-title mas-title">User Details</h3>
                 </div>
