--- a/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.html
+++ b/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.html
@@ -14,7 +14,12 @@ date_default_timezone_set('EST');
 $creation_string = date("M d, Y - g:i:s A T", strtotime($creation_time));
 
 $plan = $user->getCustomSchemas()['Subscription_Management']['Subscription_Type'];
+$status = $user->getCustomSchemas()['Subscription_Management']['Subscription_Status'];
 $expDate = $user->getCustomSchemas()['Subscription_Management']['Subscription_Expiration'];
+$stripeID = $user->getCustomSchemas()['Subscription_Management']['Stripe_ID'];
+
+$personalEmail = $user->getEmails()[0]['address'];
+$dm_email = $user->getPrimaryEmail();
 
 function isSelected($option, $target) {
     if ($option == $target) {
@@ -38,7 +43,7 @@ function isSelected($option, $target) {
         <div class="row">
             <div class="panel panel-default col-md-6">
                 <div class="panel-heading">
-                    <h3 class="panel-title mas-title">User Details</h3>
+                    <h3 class="panel-title mas-title">Update Member</h3>
                 </div>
 
                 <div class="panel-body">
@@ -83,13 +88,34 @@ function isSelected($option, $target) {
 
             <div class="panel panel-default col-md-6">
                 <div style="text-align:center" class="panel-heading">
-                    <h3 class="panel-title mas-title">User Details</h3>
+                    <h3 class="panel-title mas-title">Member Details</h3>
+                </div>
+
+                <div class="panel-body">
+                    <div class="form-group">
+                        <label for="firstName">DecaturMakers Email</label>
+                        <input class="form-control" value="<?php echo $dm_email; ?>" disabled>
+                    </div>
                 </div>
 
                 <div class="panel-body">
                     <div class="form-group">
                         <label for="firstName">Member Since</label>
                         <input class="form-control" value="<?php echo $creation_time; ?>" disabled>
+                    </div>
+                </div>
+
+                <div class="panel-body">
+                    <div class="form-group">
+                        <label for="firstName">Stripe ID</label>
+                        <input class="form-control" value="<?php echo $stripeID; ?>" disabled>
+                    </div>
+                </div>
+
+                <div class="panel-body">
+                    <div class="form-group">
+                        <label for="firstName">Personal Email</label>
+                        <input class="form-control" value="<?php echo $personalEmail; ?>" disabled>
                     </div>
                 </div>
             </div>
