--- a/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.html
+++ b/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.html
@@ -42,7 +42,7 @@ function isSelected($option, $target) {
 
         <div class="row">
             <div class="panel panel-default col-md-4">
-                <div class="panel-heading">
+                <div style="text-align:center" class="panel-heading">
                     <h3 class="panel-title mas-title">Update Member</h3>
                 </div>
 
