--- a/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.html
+++ b/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.html
@@ -60,7 +60,7 @@ function isSelected($option, $target) {
 
                         <div class="form-group">
                             <label for="rfidNumber" class="control-label">RFID Number</label>
-                            <input name="rfidNumber" class="form-control" value="<?php echo $user->getCustomSchemas()['roles']['rfid-id'];?>">
+                            <input required name="rfidNumber" class="form-control" value="<?php echo $user->getCustomSchemas()['roles']['rfid-id'];?>">
                         </div>
 
                         <div class="form-group">
