--- a/front-end-pages/member-page/member-page.html
+++ b/front-end-pages/member-page/member-page.html
@@ -24,6 +24,10 @@
     }
 ?>
 
+<style type="text/css">
+   body { background: navy !important; } /* Adding !important forces the browser to overwrite the default style applied by Bootstrap */
+</style>
+
 <div>
     <div class="row">
         <div class="mas-title col-md-12">
