--- a/front-end-pages/member-page/member-page.html
+++ b/front-end-pages/member-page/member-page.html
@@ -25,7 +25,7 @@
 ?>
 
 <style type="text/css">
-   body { background: navy !important; } /* Adding !important forces the browser to overwrite the default style applied by Bootstrap */
+   body { background: #F2F2F2 !important; } /* Adding !important forces the browser to overwrite the default style applied by Bootstrap */
 </style>
 
 <div>
