--- a/front-end-pages/member-page/member-page.html
+++ b/front-end-pages/member-page/member-page.html
@@ -24,6 +24,10 @@
     }
 ?>
 
+<style type="text/css">
+   body { background: #F2F2F2 !important; } /* PHP doesnt call the file well enough to override Bootstrap */
+</style>
+
 <div>
     <div class="row">
         <div class="mas-title col-md-12">
