--- a/front-end-pages/member-page/member-page.html
+++ b/front-end-pages/member-page/member-page.html
@@ -72,7 +72,7 @@
         <div style="text-align: center" class="col-md-4">
 
             <div>
-                <h3 class="mas-title">Card Details</h3>
+                <h3 class="mas-title" style="font-size: 14px !important;">Card Details</h3>
             </div>
 
             <div>
