--- a/front-end-pages/member-page/member-page.html
+++ b/front-end-pages/member-page/member-page.html
@@ -72,11 +72,11 @@
         <div style="text-align: center" class="col-md-4">
 
             <div>
-                <h3 class="mas-title" style="font-size: 14px !important;">Card Details</h3>
+                <h3 class="mas-title" style="font-size: 18px !important;">Card Details</h3>
             </div>
 
             <div>
-                <form name="payment">
+                <form name="payment" style="width: 80%">
                     <div class="form-group">
                         <label for="cardNum">Last 4 Digits:</label>
                         <input type="card" name="cardNum" class="form-control" disabled value="****-****-****-<?php echo $card->last4; ?>">
