--- a/front-end-pages/member-page/member-page.html
+++ b/front-end-pages/member-page/member-page.html
@@ -76,7 +76,7 @@
             </div>
 
             <div>
-                <form name="payment" style="width: 80%">
+                <form name="payment" style="width: 80%; text-align: center;">
                     <div class="form-group">
                         <label for="cardNum">Last 4 Digits:</label>
                         <input type="card" name="cardNum" class="form-control" disabled value="****-****-****-<?php echo $card->last4; ?>">
