--- a/front-end-pages/member-page/member-page.html
+++ b/front-end-pages/member-page/member-page.html
@@ -107,7 +107,20 @@
             </div>
 
             <div class="panel-body">
-                <button type="password" class="btn mas-button">Change Password</button>
+                <form name="password">
+                    <div class="form-group">
+                        <label for="firstName">Current Password</label>
+                        <input name="firstName" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="firstName">New Password</label>
+                        <input name="firstName" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="firstName">Confirm New Password</label>
+                        <input name="firstName" class="form-control">
+                    </div>
+                </form>
             </div>
         </div>
     </div>
