--- a/front-end-pages/member-page/member-page.html
+++ b/front-end-pages/member-page/member-page.html
@@ -35,9 +35,10 @@
 
     <div class="row">
         <!-- PERSONAL INFO FORM -->
-        <div style="text-align: center" class="panel panel-default col-md-4">
-            <div class="panel-heading">
-                <h3 class="panel-title mas-title">User Details</h3>
+        <div style="text-align: center" class="col-md-4">
+
+            <div>
+                <h3 class="mas-title" style="font-size: 18px !important;">Personal Information</h3>
             </div>
 
             <div class="panel-body">
@@ -101,9 +102,10 @@
         </div>
 
         <!-- PASSWORD -->
-        <div style="text-align: center" class="panel panel-default col-md-4">
-            <div class="panel-heading">
-                <h3 class="panel-title mas-title">Password</h3>
+        <div style="text-align: center" class="col-md-4">
+
+            <div>
+                <h3 class="mas-title" style="font-size: 18px !important;">Change Password</h3>
             </div>
 
             <div class="panel-body">
