--- a/front-end-pages/member-page/member-page.html
+++ b/front-end-pages/member-page/member-page.html
@@ -112,16 +112,18 @@
                 <form name="password">
                     <div class="form-group">
                         <label for="firstName">Current Password</label>
-                        <input name="firstName" class="form-control">
+                        <input type="password" name="firstName" class="form-control">
                     </div>
                     <div class="form-group">
                         <label for="firstName">New Password</label>
-                        <input name="firstName" class="form-control">
+                        <input type="password" name="firstName" class="form-control">
                     </div>
                     <div class="form-group">
                         <label for="firstName">Confirm New Password</label>
-                        <input name="firstName" class="form-control">
+                        <input type="password" name="firstName" class="form-control">
                     </div>
+
+                    <button type="submit" class="btn mas-button">Update Password</button>                    
                 </form>
             </div>
         </div>
