--- a/front-end-pages/member-page/member-page.html
+++ b/front-end-pages/member-page/member-page.html
@@ -28,9 +28,9 @@
         var confirmPassword = $("#confirmpw").val();
 
         if (password != confirmPassword)
-            $("#divCheckPasswordMatch").html("Passwords do not match!");
+            $("#divError").html("Passwords do not match!");
         else
-            $("#divCheckPasswordMatch").html("Passwords match.");
+            $("#divError").html("Passwords match.");
     }
 
     $(document).ready(function () {
@@ -130,13 +130,16 @@
                         <label for="currpw">Current Password</label>
                         <input type="password" name="currpw" id="currpw" class="form-control">
                     </div>
+
                     <div class="form-group">
                         <label for="newpw">New Password</label>
                         <input type="password" name="newpw" id="newpw" class="form-control">
                     </div>
+
                     <div class="form-group">
                         <label for="confirmpw">Confirm New Password</label>
                         <input type="password" name="confirmpw" id="confirmpw" class="form-control" onchange="checkPasswordMatch()">
+                        <div id="Error" class="help-block"></div>
                     </div>
 
                     <button type="submit" class="btn mas-button">Update Password</button>                    
