error text test

--- a/front-end-pages/member-page/member-page.html
+++ b/front-end-pages/member-page/member-page.html
@@ -28,9 +28,9 @@
         var confirmPassword = $("#confirmpw").val();
 
         if (password != confirmPassword)
-            $("#divError").html("Passwords do not match!");
+            $("#Error").html("Passwords do not match!");
         else
-            $("#divError").html("Passwords match.");
+            $("#Error").html("Passwords match.");
     }
 
     $(document).ready(function () {
