error text test

--- a/front-end-pages/member-page/member-page.html
+++ b/front-end-pages/member-page/member-page.html
@@ -138,7 +138,7 @@
 
                     <div class="form-group">
                         <label for="confirmpw">Confirm New Password</label>
-                        <input type="password" name="confirmpw" id="confirmpw" class="form-control" onchange="checkPasswordMatch()">
+                        <input type="password" name="confirmpw" id="confirmpw" class="form-control" onchange="checkPasswordMatch();">
                         <div id="Error" class="help-block"></div>
                     </div>
 
