--- a/front-end-pages/member-page/member-page.html
+++ b/front-end-pages/member-page/member-page.html
@@ -139,7 +139,7 @@
                     <div class="form-group">
                         <label for="confirmpw">Confirm New Password</label>
                         <input type="password" name="confirmpw" id="confirmpw" class="form-control" onchange="checkPasswordMatch();">
-                        <div id="Error" class="help-block"></div>
+                        <div id="Error" class="help-block">Help Block!</div>
                     </div>
 
                     <button type="submit" class="btn mas-button">Update Password</button>                    
