Test for wp fix

--- a/front-end-pages/member-page/member-page.html
+++ b/front-end-pages/member-page/member-page.html
@@ -34,7 +34,7 @@
     }
 
     jQuery(document).ready(function () {
-       $("#confirmpw").keyup(checkPasswordMatch);
+       jQuery("#confirmpw").keyup(checkPasswordMatch);
     });    
 </script>
 
