error color test

--- a/front-end-pages/member-page/member-page.html
+++ b/front-end-pages/member-page/member-page.html
@@ -134,7 +134,7 @@
                         <input type="password" name="currpw" id="currpw" class="form-control">
                     </div>
 
-                    <div class="error group has-error">
+                    <div class="error-group">
                         <div class="form-group">
                             <label for="newpw">New Password</label>
                             <input type="password" name="newpw" id="newpw" class="form-control">
