--- a/front-end-pages/member-page/member-page.html
+++ b/front-end-pages/member-page/member-page.html
@@ -45,9 +45,9 @@
    body { background: #F2F2F2 !important; } /* PHP doesnt call the file well enough to override Bootstrap */
 </style>
 
-<div>
+<div class="container-fluid">
     <div class="row">
-        <div class="mas-title col-md-12" style="padding-left: 20px;">
+        <div class="mas-title col-md-12">
             Welcome, <?php echo $user->getName()->getFullName(); ?>!        
         </div>
     </div>
