--- a/front-end-pages/member-page/member-page.html
+++ b/front-end-pages/member-page/member-page.html
@@ -128,24 +128,27 @@
             </div>
 
             <div class="panel-body">
-                <form name="password">
-                    <div class="form-group">
+                <form method=POST action="<?php echo admin_url( 'admin-post.php') ?>" name="password">
+                    <!-- Currently not necessary -->
+                    <!--<div class="form-group">
                         <label for="currpw">Current Password</label>
                         <input type="password" name="currpw" id="currpw" class="form-control">
-                    </div>
+                    </div>-->
 
                     <div id="errorGroup">
                         <div class="form-group">
                             <label for="newpw">New Password</label>
-                            <input type="password" name="newpw" id="newpw" class="form-control">
+                            <input type="password" name="newPassword" id="newpw" class="form-control">
                         </div>
 
                         <div class="form-group">
                             <label for="confirmpw">Confirm New Password</label>
-                            <input type="password" name="confirmpw" id="confirmpw" class="form-control" onchange="checkPasswordMatch();">
+                            <input type="password" id="confirmpw" class="form-control" onchange="checkPasswordMatch();">
                             <div id="Error" class="help-block"></div>
                         </div>
                     </div>
+
+                    <input type="hidden" name="action" value="update_self_password">
 
                     <button type="submit" class="btn mas-button">Update Password</button>                    
                 </form>
