Adding creation date back to table

--- a/front-end-pages/admin-pages/members-tab/member-table/admin-members-table.html
+++ b/front-end-pages/admin-pages/members-tab/member-table/admin-members-table.html
@@ -22,7 +22,7 @@
                         <th>RFID Tag #</th>
                         <th>Membership Plan</th>
                         <th>Subscription Status</th>
-                        <th>Member Since (D-M-Y)</th>
+                        <th>Member Since</th>
                     </tr>
                 </thead>
                 <tbody>
