--- a/front-end-pages/registration-form/failure.html
+++ b/front-end-pages/registration-form/failure.html
@@ -1,12 +1,14 @@
-<br>
-<body>
-    <div class="panel panel-danger">
-        <div class="panel-heading">
-            Whoops!
-        </div>
+<style type="text/css">
+   body { background: #F2F2F2 !important; } /* PHP doesnt call the file well enough to override Bootstrap */
+</style>
 
-        <div class="panel-body">
-            <p>It seems that there are some issues on our end. Please try again later.</p>
-        </div>
+<br>
+<div class="panel panel-danger">
+    <div class="panel-heading">
+        Whoops!
     </div>
-</body>
+
+    <div class="panel-body">
+        <p>It seems that there are some issues on our end. Please try again later.</p>
+    </div>
+</div>
