--- a/front-end-pages/registration-form/success.html
+++ b/front-end-pages/registration-form/success.html
@@ -1,12 +1,14 @@
-<br>
-<body>
-    <div class="panel panel-success">
-        <div class="panel-heading">
-            Success!
-        </div>
+<style type="text/css">
+   body { background: #F2F2F2 !important; } /* PHP doesnt call the file well enough to override Bootstrap */
+</style>
 
-        <div class="panel-body">
-            <p>Congrats! Your registration has been received. Be on the lookout for an email with your next steps!</p>
-        </div>
+<br>
+<div class="panel panel-success">
+    <div class="panel-heading">
+        Success!
     </div>
-</body>
+
+    <div class="panel-body">
+        <p>Congrats! Your registration has been received. Be on the lookout for an email with your next steps!</p>
+    </div>
+</div>
