Adding founding member to display

--- a/front-end-pages/admin-pages/members-tab/member-table/admin-members-table.html
+++ b/front-end-pages/admin-pages/members-tab/member-table/admin-members-table.html
@@ -23,6 +23,7 @@
                         <th>Membership Plan</th>
                         <th>Subscription Status</th>
                         <th>Member Since</th>
+                        <th>Founding Member</th>
                     </tr>
                 </thead>
                 <tbody>
