--- a/front-end-pages/member-page/member-page.html
+++ b/front-end-pages/member-page/member-page.html
@@ -2,8 +2,8 @@
     defined( 'ABSPATH' ) or die();
     echo '<link rel="stylesheet" type="text/css" href="' . plugins_url( 'member-page.css', __FILE__ ) . '">' . "\n";
 
-    require_once dirname(__DIR__).'/resources/GSuiteAPI.php';
-    require_once dirname(__DIR__).'/resources/StripeAPI.php';
+    require_once dirname(__DIR__).'/../resources/GSuiteAPI.php';
+    require_once dirname(__DIR__).'/../resources/StripeAPI.php';
 
     $email = wp_get_current_user()->user_email;
 
