Add Membership Status

--- a/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.html
+++ b/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.html
@@ -80,6 +80,17 @@ function isSelected($option, $target) {
                         </div>
 
                         <div class="form-group">
+                            <label for="subscriptionStatus" class="control-label">Subscription Status</label>
+                            <select class="form-control" name="subscriptionStatus" id="subscriptionStatus">
+                                <option value="none"></option>
+                                <option value="Pending" <?php isSelected("Pending", $status)?> >Pending</option>
+                                <option value="Active" <?php isSelected("Active", $plan)?> >Active</option>
+                                <option value="Expired" <?php isSelected("Expired", $plan)?> >Expired</option>
+                                <option value="Disabled" <?php isSelected("Disabled", $plan)?> >Disabled</option>
+                            </select>
+                        </div>
+
+                        <div class="form-group">
                             <label for="subscriptionExp" class="control-label">Subscription Expiration Date</label>
                             <input type="date" name="subscriptionExp" class="form-control" value= <?php echo $expDate; ?> >
                         </div>
