--- a/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.html
+++ b/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.html
@@ -84,9 +84,9 @@ function isSelected($option, $target) {
                             <select class="form-control" name="subscriptionStatus" id="subscriptionStatus">
                                 <option value="none"></option>
                                 <option value="Pending" <?php isSelected("Pending", $status)?> >Pending</option>
-                                <option value="Active" <?php isSelected("Active", $plan)?> >Active</option>
-                                <option value="Expired" <?php isSelected("Expired", $plan)?> >Expired</option>
-                                <option value="Disabled" <?php isSelected("Disabled", $plan)?> >Disabled</option>
+                                <option value="Active" <?php isSelected("Active", $status)?> >Active</option>
+                                <option value="Expired" <?php isSelected("Expired", $status)?> >Expired</option>
+                                <option value="Disabled" <?php isSelected("Disabled", $status)?> >Disabled</option>
                             </select>
                         </div>
 
