--- a/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.html
+++ b/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.html
@@ -18,6 +18,11 @@ $status = $user->getCustomSchemas()['Subscription_Management']['Subscription_Sta
 $expDate = $user->getCustomSchemas()['Subscription_Management']['Subscription_Expiration'];
 $stripeID = $user->getCustomSchemas()['Subscription_Management']['Stripe_ID'];
 
+$rfid = $user->getCustomSchemas()['roles']['rfid-id'];
+if ($rfid == 0) {
+    $rfid = "";
+}
+
 $personalEmail = $user->getEmails()[0]['address'];
 $dm_email = $user->getPrimaryEmail();
 
@@ -65,7 +70,7 @@ function isSelected($option, $target) {
 
                         <div class="form-group">
                             <label for="rfidNumber" class="control-label">RFID Number</label>
-                            <input name="rfidNumber" class="form-control" value="<?php echo $user->getCustomSchemas()['roles']['rfid-id'];?>">
+                            <input name="rfidNumber" class="form-control" value="<?php echo $rfid;?>">
                         </div>
 
                         <div class="form-group">
